--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 /tmp
 
 # Ignore other unneeded files.
-config/database.yml
 doc/
 *.swp
 *~
@@ -19,5 +18,6 @@ doc/
 .idea
 .secret
 
-# Uploaded files
+# App
 public/uploads
+config/database.yml
